[PLF-426] : startup /shutdown scripts